--- a/Bionluk Kişisel/style.css
+++ b/Bionluk Kişisel/style.css
@@ -70,6 +70,23 @@
     margin: 20px auto;
 }
 
+.conts{
+    width: 100%;
+    position: absolute;
+    top: 38%;
+    text-align: center;
+    color: rgba(240, 248, 255, 0.205);
+    
+}
+.conts h1{
+    font-size: 90px;
+    
+}
+.conts h1:hover{
+    font-size: 90px;
+    color: rgb(126, 102, 102);
+    transition: 0.7s;
+}
 /*boşluk*/
 .bant{
     width: 100%;
